Fixed event date input width on small devices

--- a/styles/right.css
+++ b/styles/right.css
@@ -215,6 +215,10 @@ table, th, td {
   font-size: 16px;
 }
 
+.event-date-input {
+  width: 100%;
+}
+
 .event-date-and-title-input-container {
   display: grid;
   grid-template-columns: 1fr 3fr;
